# AirPollutionPredictor

./: .gitignore  README.md  marszalkowska_log.csv  pyproject.toml
archive/baseline_predictor/: smog_predictor.ipynb
archive/data/: marszalkowska_log.csv  pollution.csv  warsaw_weather_2024_hourly.csv
archive/notebooks/: world_weather_online.ipynb
archive/raspberrypi/: README.md  marszalkowska_log.csv  meter_stats.py  metrics.txt  pi_predictor.py  smog_log.sh  statistics.txt
baseline_predictor/: smog_predictor.ipynb  smog_predictor.py  smog_predictor2.py
docs/: development.md  model.md  structure.md
downloading_data/: gios-pjp-data.csv  open_meteo.ipynb  open_meteo.py  warsaw_weather_2025_hourly.csv
tools/data_retrieval/: pollution_data_retrieval.sh  weather_data_retrieval.sh
tools/predictor/: README.md
tools/psql/: database_setup.sql
tools/python/: downloads.py  import_historic_data.py  nohup.out  plotter.py  statistics.py
